--- a/tableResults03.tex
+++ b/tableResults03.tex
@@ -1,5 +1,5 @@
 
-	\begin{tabularx}{0.845\linewidth}{|l|c c c c c|}
+	\begin{tabularx}{0.915\linewidth}{|l|c c c c c|}
 		\hline 
 		\rowcolor{maroon!50}
 		Method: & \multicolumn{5}{c|}{25k Pittsburgh} \\
@@ -11,7 +11,7 @@
 		\hline
 		\rowcolor{maroon!10}
       \rowcolor{maroon!10}
-    BOW raw SVM   & 6.4   & 8.1   & 13.5  & 17.5  & 20.5 \\
+    BOW SVM no calib.   & 6.4   & 8.1   & 13.5  & 17.5  & 20.5 \\
 		  \rowcolor{maroon!10}
     BOW           & 28.7  & 35.7  & 45.8 & 53.7   & 61.5 \\
         \rowcolor{maroon!10}
