--- a/template.tex
+++ b/template.tex
@@ -796,7 +796,7 @@ per-exemplar classification tasks, where only a small number of positive example
 
 
 \begin{acknowledgements}
-   This work was supported by the MSR-INRIA laboratory, the EIT-ICT labs.
+   This work was supported by the MSR-INRIA laboratory, the EIT-ICT labs, Google and the ERC project LEAP.
    {
    %\small
    \noindent
