dealing with SF

--- a/mybib.bib
+++ b/mybib.bib
@@ -1,3 +1,12 @@
+@inproceedings{Cao13,
+  author = {Cao, Song and Snavely, Noah},
+  booktitle = {CVPR},
+  pages = {700-707},
+  publisher = {IEEE},
+  title = {Graph-Based Discriminative Learning for Location Recognition.},
+  year = 2013
+}
+
 
 @misc{imageGrow,
 author = {Horaczek, Stan},
