--- a/tableResults03.tex
+++ b/tableResults03.tex
@@ -15,9 +15,9 @@
 		  \rowcolor{maroon!10}
     BOW           & 28.7  & 35.7  & 45.8 & 53.7   & 61.5 \\
         \rowcolor{maroon!10}
-		BOW w-norm  & 31.8    & 38.7  & 49.7  & 60.2  & 69.4 \\
+		BOW w-norm  & 31.8    & 38.7  & 49.7  & \textbf{60.2}  & \textbf{69.4} \\
       \rowcolor{maroon!10}
-    BOW p-val     & 33.0  & 40.3  & 50.2 & 58.7   &  66.4 \\
+    BOW p-val     & \textbf{33.0}  & \textbf{40.3}  & \textbf{50.2} & 58.7   &  66.4 \\
     \hline
   %   %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 		% \rowcolor{maroon!10}
